--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>your-artifact-id</artifactId>
+    <groupId>com.example.maven-project</groupId>
+    <artifactId>maven-project</artifactId>
     <version>1.0.0</version>
     <build>
         <plugins>
